[package]
name = "normhub"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"

[lib]
name = "normhub"
path = "src/normhub/lib.rs"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["env", "derive"] }
dotenvy = "0.15.7"
headers = "0.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["full"] }
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.18.0", features = ["time_0_3"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "chrono",
] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
